@@ -4,7 +4,10 @@ import jakarta.persistence.Entity;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
 import jakarta.persistence.Table;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.context.annotation.Profile;
@@ -14,34 +17,33 @@ import org.springframework.transaction.annotation.Transactional;
 @Profile("test")
 @Component
 @Slf4j
-public class DatabseCleanUp implements InitializingBean {
-
+public class DatabaseCleanUp implements InitializingBean {
   @PersistenceContext
   private EntityManager entityManager;
+
   private List<String> tableNames;
-  private List<String> notGeneratedIdTableNames;
+  private Set<String> generatedIdTable;
 
   @Override
-  public void afterPropertiesSet() throws Exception {
+  public void afterPropertiesSet() {
     tableNames = entityManager.getMetamodel().getEntities().stream()
         .filter(entity -> entity.getJavaType().getAnnotation(Entity.class) != null)
         .map(entity -> entity.getJavaType().getAnnotation(Table.class).name())
-        .toList();
+        .collect(Collectors.toList());
 
-    notGeneratedIdTableNames = List.of("community_user_relation", "community_like");
+    generatedIdTable = new HashSet<>(List.of("community_like", "community_user_relation"));
   }
 
   @Transactional
   public void execute() {
     entityManager.flush();
-    entityManager.createNativeQuery("SET REFERENTAL_INTEGRITY FALSE").executeUpdate();
+    entityManager.createNativeQuery("SET REFERENTIAL_INTEGRITY FALSE").executeUpdate();
     for (String tableName : tableNames) {
       entityManager.createNativeQuery("TRUNCATE TABLE " + tableName).executeUpdate();
-      if (!notGeneratedIdTableNames.contains(tableName)) {
-        entityManager.createNativeQuery(
-            "ALTER TABLE " + tableName + "ALTER COLUMN ID RESTART WITH 1").executeUpdate();
+      if (!generatedIdTable.contains(tableName)) {
+        entityManager.createNativeQuery("ALTER TABLE " + tableName + " ALTER COLUMN ID RESTART WITH 1").executeUpdate();
       }
     }
-    entityManager.createNativeQuery("SET REFERENTAL_INTEGRITY TRUE").executeUpdate();
+    entityManager.createNativeQuery("SET REFERENTIAL_INTEGRITY TRUE").executeUpdate();
   }
 }
